# llm-matrix

./: .env  .gitignore  .gitmodules  README.md  flake.nix  pyproject.toml  ruff.toml
documents/: dataset.md  model_comparison.md
notebooks/: cluster.ipynb  dataset.ipynb  embeddings_evo2.ipynb  embeddings_megaDNA.ipynb  example.ipynb  example_megaDNA.ipynb  mlp.ipynb
script/: embeddings_evo2.py
