[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matrix"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "torch",
    "megadna",
    "notebook",
    "python-dotenv",
    "bio>=1.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = ["ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/matrix", "megaDNA"]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.6.0%2Bcu124-cp312-cp312-linux_x86_64.whl" }
megadna = { path = "megaDNA" }
