[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matrix"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    # "torch",
    "megadna",
    "evo2",
    "notebook",
    "python-dotenv",
    "bio>=1.7.1",
    "scikit-learn>=1.6.1",
    "umap>=0.1.1",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "plotly>=6.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = ["ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/matrix", "megaDNA"]

[tool.uv.sources]
# torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.5.1%2Bcu124-cp312-cp312-linux_x86_64.whl" }
megadna = { path = "megaDNA" }
evo2 = { path = "evo2" }
